5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_2730.log
== TEST (2019-04-15 23:02:24) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))
Q1 > 0
Q2 > 0
Q3 < 0
Q3 < 0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 > 0
NameError: name 'Q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:03:00) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))
Q1 > 0
Q2 > 0
Q3 < 0
Q3 < 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q1 > 0
NameError: name 'Q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:03:48) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))
"Q1" > 0
"Q2" > 0
"Q3" < 0
"Q4" < 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    "Q1" > 0
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:05:27) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))
if (x > 0 , y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:05:37) 
-- CODE:
x = float(input("Valor de x: "))
y = float(input("Valor de y: "))
if (x > 0 , y > 0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.2841
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
